test/spec_vectors/simd_lane/fail/module_74.wat
(module (func (result v128) (i8x16.replace_lane 0 (i32.const 0) (i32.const 1))))